<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title">My Nanodegree Apps!</string>

    <!-- menu titles-->
    <string name="menu_spotify_streamer">Spotify Streamer</string>
    <string name="menu_scores_app">Scores App</string>
    <string name="menu_library_app">Library App</string>
    <string name="menu_build_it_bigger">Build It Bigger</string>
    <string name="menu_xyz_reader">XYZ Reader</string>
    <string name="menu_capstone">Capstone: My Own App</string>

    <!--messages-->
    <string name="toast_spotify">This button will launch my Spotify app!</string>
    <string name="toast_scores">This button will launch my Scores app!</string>
    <string name="toast_library">This button will launch my Library app!</string>
    <string name="toast_build">This button will launch my Build It Bigger app!</string>
    <string name="toast_xyz">This button will launch my XYZ Reader app!</string>
    <string name="toast_capstone">This button will launch my capstone app!</string>

</resources>
